# virtual-face-cam

./: .gitignore  LICENSE  README.md  build.py  gui.py  make_face.py  pyproject.toml  requirements.txt  virtual_cam.py  실행_Mac.command  실행_Windows.bat
mac/: README.md  mac_virtual_face_cam.py  pyproject.toml
mac/Virtual Face Cam.app/Contents/: Info.plist
mac/Virtual Face Cam.app/Contents/Resources/: launch.sh  mac_virtual_face_cam.py  requirements.txt
mac/scripts/: build_app.sh  launch.sh
tests/: test_mac_app.py  test_media.py
