[project]
name = "virtual-face-cam-mac"
version = "0.2.0"
description = "macOS browser UI for sending photos or looping video to OBS Virtual Camera"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyvirtualcam>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.10.0",
]
